--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "underscore": "~1.8.3"
   },
   "devDependencies": {
-    "backbone.nativeview": "~0.3.3",
-    "chai": "~4.1.1",
-    "coffee-coverage": "1.0.1",
-    "coffee-script": "~1.12.7",
-    "coffeeify": "~2.0.1",
-    "grunt": "~0.4.5",
+    "backbone.nativeview": "~0.3.4",
+    "chai": "~4.2.0",
+    "coffee-coverage": "~2.0.0",
+    "coffeescript": "~1.12.7",
+    "coffeeify": "~3.0.1",
+    "grunt": "~1.0.4",
     "grunt-browserify": "~4.0.1",
-    "grunt-cli": "~0.1.13",
-    "grunt-coffeelint": "~0.0.15",
-    "grunt-contrib-compress": "0.14.x",
-    "grunt-contrib-uglify": "~0.11.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-istanbul": "0.7.0",
-    "grunt-mocha-test": "~0.13.2",
-    "grunt-transbrute": "0.2.x",
-    "jquery": "2.2.x",
-    "jsdom": "~11.1.0",
+    "grunt-cli": "~1.3.2",
+    "grunt-coffeelint": "~0.0.16",
+    "grunt-contrib-compress": "1.4.3",
+    "grunt-contrib-uglify": "~4.0.1",
+    "grunt-contrib-watch": "~1.1.0",
+    "grunt-istanbul": "0.8.0",
+    "grunt-mocha-test": "~0.13.3",
+    "grunt-transbrute": "1.0.1",
+    "jquery": "~3.3.1",
+    "jsdom": "~14.0.0",
     "jsdom-global": "~3.0.2",
-    "mocha": "~3.5.0",
-    "prompt": "~0.2.14",
-    "sinon": "~2.3.6",
-    "sinon-chai": "~2.12.0"
+    "mocha": "~6.0.2",
+    "prompt": "~1.0.0",
+    "sinon": "~7.3.1",
+    "sinon-chai": "~3.3.0"
   },
   "main": "build/chaplin.js",
   "scripts": {
